--- a/game.html
+++ b/game.html
@@ -5,6 +5,13 @@
 <body>
 
 <canvas id="canvas" style="border:1px solid #000"></canvas>
+
+<div style="display:none;">
+  <img id="background" src="background.png" width="1300" height="600">
+  <img id="player" src="player.png" width="22" height="22">
+  <img id="hit" src="hit.png" width="20" height="20">
+  <img id="enemy" src="enemy.png" width="20" height="20">
+</div>
  
 <script>
 // setup the animation frame
@@ -19,14 +26,18 @@
 // setup variables 
 var canvas = document.getElementById("canvas"),
     ctx = canvas.getContext("2d"),
+	img_bg = document.getElementById("background"),
+	img_pc = document.getElementById("player"), 
+	img_hit = document.getElementById("hit"),
+	img_mob = document.getElementById("enemy"),
     width = 1300,
     height = 600,
     player = {
-        x: width / 2,
-        y: height - 15,
-        width: 20,
-        height: 20,
-        speed: 3,
+        x: 30,
+        y: 0,
+        width: 21,
+        height: 21,
+        speed: 4,
         velX: 0,
         velY: 0,
         jumping: false,
@@ -41,13 +52,13 @@ var canvas = document.getElementById("canvas"),
 		y: 0
 	},
 	bullet = {
-		x: -10,
-		y: -10,
+		x: -100,
+		y: -100,
 		velX: 0,
 		velY: 0,
 		damage: 10,
-		width: 8,
-		height: 8,
+		width: 18,
+		height: 18,
 		speed: 10
 	},
     keys = [],
@@ -87,6 +98,36 @@ boxes.push({
 });
 
 // define level boxes
+boxes.push({
+    x: 172,
+    y: 160,
+    width: 50,
+    height: 15
+});
+boxes.push({
+    x: 275,
+    y: 160,
+    width: 130,
+    height: 50
+});
+boxes.push({
+    x: 475,
+    y: 130,
+    width: 50,
+    height: 20
+});
+boxes.push({
+    x: 555,
+    y: 120,
+    width: 100,
+    height: 20
+});
+boxes.push({
+    x: 600,
+    y: 120,
+    width: 10,
+    height: 120
+});
 boxes.push({
     x: 10,
     y: 210,
@@ -166,16 +207,28 @@ boxes.push({
     height: 262
 });
 boxes.push({
+    x: 770,
+    y: 155,
+    width: 218,
+    height: 20
+});
+boxes.push({
+    x: 770,
+    y: 115,
+    width: 20,
+    height: 60
+});
+boxes.push({
     x: 915,
     y: 275,
     width: 22,
     height: 22
 });
 boxes.push({
-    x: 955,
+    x: 945,
     y: 315,
-    width: 52,
-    height: 52
+    width: 45,
+    height: 45
 });
 boxes.push({
     x: 1035,
@@ -198,14 +251,20 @@ boxes.push({
 
 
 // define spikes
-/*
 spikes.push({
 	x: 10,
 	y: height-20,
-	width: 80,
+	width: width-20,
 	height: 20
 });
-*/
+
+spikes.push({
+    x: 309,
+    y: 159,
+    width: 65,
+    height: 30
+});
+
 
 // define enemies
 passes.push({
@@ -215,7 +274,8 @@ passes.push({
 	height: 30,
 	hp: 30,
 	velX: 0,
-	velY: 5
+	velY: 6,
+	alive: true
 });
 passes.push({
 	x: 220,
@@ -224,7 +284,8 @@ passes.push({
 	height: 30,
 	hp: 30,
 	velX: 0,
-	velY: 5
+	velY: 6,
+	alive: true
 });
 passes.push({
 	x: 525,
@@ -233,10 +294,69 @@ passes.push({
 	height: 30,
 	hp: 30,
 	velX: 0,
-	velY: 5
+	velY: 6,
+	alive: true
 });
-
-
+passes.push({
+	x: 500,
+	y: 180,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 4,
+	velY: 0,
+	alive: true
+});
+passes.push({
+	x: 650,
+	y: 114,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 4,
+	velY: 0,
+	alive: true
+});
+passes.push({
+	x: 870,
+	y: 70,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 0,
+	velY: 2,
+	alive: true
+});
+passes.push({
+	x: 1197,
+	y: 350,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 0,
+	velY: 8,
+	alive: true
+});
+passes.push({
+	x: 1097,
+	y: 400,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 0,
+	velY: 8,
+	alive: true
+});
+passes.push({
+	x: 1000,
+	y: 450,
+	width: 30,
+	height: 30,
+	hp: 30,
+	velX: 0,
+	velY: 8,
+	alive: true
+});
 canvas.width = width;
 canvas.height = height;
 
@@ -273,50 +393,13 @@ function update() {
     ctx.clearRect(0, 0, width, height);
     ctx.fillStyle = "black";
     ctx.beginPath();
+	ctx.drawImage(img_bg, 0, 0);
     
 	player.grounded = false;
 	
-	// draw spike boxes and check collision
-    for (var i = 0; i < spikes.length; i++) {
-		ctx.fillStyle = "yellow";
-        ctx.rect(spikes[i].x, spikes[i].y, spikes[i].width, spikes[i].height);
- 
-        var dir = colCheck(player, spikes[i]);
- 
-        if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
-			// if collision, reset player (kill them)
-			player.x = width / 2;
-			player.y = height / 2;
-            player.velX = 0;
-            player.jumping = false;
-		}
-		
-		// check bullet collision
-		dir = colCheck(bullet, spikes[i]);
- 
-        if (dir) {
-			bullet.alive = false;
-			bullet.x = -30;
-			bullet.y = -30;
-			bullet.velX = 0;
-			bullet.velY = 0;
-		}
-		
-		// bound bullet and kill it
-		if (bullet.x < 0 || bullet.x > width && bullet.y < 0 || bullet.y > height) {
-			bullet.alive = false;
-			bullet.x = -30;
-			bullet.y = -30;
-			bullet.velX = 0;
-			bullet.velY = 0;
-		}
-    }
-	ctx.fill();
-	ctx.beginPath();
-	
 	// draw boxes and check collision
     for (var i = 0; i < boxes.length; i++) {
-		ctx.fillStyle = "black";
+		ctx.fillStyle = "rgb(30, 10, 30)";
         ctx.rect(boxes[i].x, boxes[i].y, boxes[i].width, boxes[i].height);
  
         var dir = colCheck(player, boxes[i]);
@@ -336,8 +419,8 @@ function update() {
  
         if (dir) {
 			bullet.alive = false;
-			bullet.x = -30;
-			bullet.y = -30;
+			bullet.x = -100;
+			bullet.y = -100;
 			bullet.velX = 0;
 			bullet.velY = 0;
 		}
@@ -345,8 +428,51 @@ function update() {
 		// bound bullet and kill it
 		if (bullet.x < 0 || bullet.x > width && bullet.y < 0 || bullet.y > height) {
 			bullet.alive = false;
-			bullet.x = -30;
-			bullet.y = -30;
+			bullet.x = -100;
+			bullet.y = -100;
+			bullet.velX = 0;
+			bullet.velY = 0;
+		}
+    }
+	ctx.fill();
+	ctx.beginPath();
+	
+	// draw spike boxes and check collision
+    for (var i = 0; i < spikes.length; i++) {
+		ctx.fillStyle = "rgb(255, 43, 0)";
+        ctx.rect(spikes[i].x, spikes[i].y, spikes[i].width, spikes[i].height);
+ 
+        var dir = colCheck(player, spikes[i]);
+ 
+        if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
+			// if collision, reset player (kill them)
+			player.x = 30;
+			player.y = 10;
+            player.velX = 0;
+            player.jumping = false;
+			score = 0;
+			win = false;
+			for (var j = 0; j < passes.length; j++) {
+				passes[j].alive = true;
+			}
+		}
+		
+		// check bullet collision
+		dir = colCheck(bullet, spikes[i]);
+ 
+        if (dir) {
+			bullet.alive = false;
+			bullet.x = -100;
+			bullet.y = -100;
+			bullet.velX = 0;
+			bullet.velY = 0;
+		}
+		
+		// bound bullet and kill it
+		if (bullet.x < 0 || bullet.x > width && bullet.y < 0 || bullet.y > height) {
+			bullet.alive = false;
+			bullet.x = -100;
+			bullet.y = -100;
 			bullet.velX = 0;
 			bullet.velY = 0;
 		}
@@ -370,67 +496,74 @@ function update() {
 	}
 	
 	// update enemies and render
-	ctx.fillStyle = "yellow";
+	ctx.fillStyle = "rgb(240, 202, 100)";
 	
 	for (var i = 0; i < passes.length; i++) {
-		ctx.fillRect(passes[i].x, passes[i].y, passes[i].width, passes[i].height);
-		passes[i].x += passes[i].velX;
-		passes[i].y += passes[i].velY;
+		if (passes[i].alive == true) {
+			ctx.drawImage(img_mob, passes[i].x, passes[i].y);
+			//ctx.fillRect(passes[i].x, passes[i].y, passes[i].width, passes[i].height);
+			passes[i].x += passes[i].velX;
+			passes[i].y += passes[i].velY;
 		
-		// check block collision
-		for (var j = 0; j < boxes.length; j++) {
-			var dir = colCheck(passes[i], boxes[j]);
+			// check block collision
+			for (var j = 0; j < boxes.length; j++) {
+				var dir = colCheck(passes[i], boxes[j]);
  
-			// deal with player collisions based on direction of hit
-			if (dir === "l" || dir === "r") {
-				passes[i].velX *= -1;
-			} else if (dir === "b" || dir === "t") {
-				passes[i].velY *= -1;
+				// deal with player collisions based on direction of hit
+				if (dir === "l" || dir === "r") {
+					passes[i].velX *= -1;
+				} else if (dir === "b" || dir === "t") {
+					passes[i].velY *= -1;
+				}
 			}
-		}
 		
-		// check player collision
-		dir = colCheck(passes[i], player);
+			// check player collision
+			dir = colCheck(passes[i], player);
 
-        if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
-			// if collision, reset player (kill them)
-			player.x = width / 2;
-			player.y = height / 2;
-            player.velX = 0;
-            player.jumping = false;
-		}	
+			if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
+				// if collision, reset player (kill them)
+				player.x = 30;
+				player.y = 10;
+				player.velX = 0;
+				player.jumping = false;
+				score = 0;
+				win = false;
+				for (var j = 0; j < passes.length; j++) {
+					passes[j].alive = true;
+				}
+			}	
 
-		// check bullet collision
-		dir = colCheck(passes[i], bullet);
+			// check bullet collision
+			dir = colCheck(passes[i], bullet);
 
-        if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
-			// if collision, reset player (kill them)
-			passes[i].x = -100;
-			passes[i].y = -100;
-			passes[i].velX = 0;
-			passes[i].velY = 0;
-			score++;
-			if (score >= passes.length) {
-				win = true;
+			if (dir === "l" || dir === "r" || dir === "b" || dir === "t") {
+				// if collision, "kill" enemy
+				passes[i].alive = false;
+				score++;
+				if (score >= passes.length) {
+					win = true;
+				}
 			}
 		}	
 	}
  
 	// draw player
-    ctx.fill();
-    ctx.fillStyle = "red";
-    ctx.fillRect(player.x, player.y, player.width, player.height);
+	ctx.drawImage(img_pc, player.x+1, player.y+1);
+    //ctx.fill();
+    //ctx.fillStyle = "rgb(240, 10, 150)";
+    //ctx.fillRect(player.x, player.y, player.width, player.height);
 	
 	// draw bullet
 	if (bullet.alive == true) {
-		ctx.fillStyle = "red";
-		ctx.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
+		ctx.drawImage(img_hit, bullet.x+2, bullet.y+2);
+		//ctx.fillStyle = "rgb(255, 0, 230)";
+		//ctx.fillRect(bullet.x, bullet.y, bullet.width, bullet.height);
 	}
 	
 	// draw win
 	if (win == true) {
 		ctx.font = '100pt Calibri';
-		ctx.fillText('You win!', width / 2 - 240, height / 2 + 30);
+		ctx.fillText('YOU WIN', width / 2 - 240, height / 2 + 30);
 	}
 	
 	// draw crosshair
